fixed issue where focus on header list items would remain even after clicking off

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -987,7 +987,7 @@ button:hover {
 			display: none;
 		}
 	}
-	&_anchor-focus {
+	&_anchor-focused {
 		@extend .header_anchor;
 		flex-direction: column;
 		padding: 16px 16px 0;
