--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1462,6 +1462,7 @@ button:hover {
 		top: 0px !important;
 		z-index: 1;
 		display: flex;
+		flex-direction: column;
 		align-items: start;
 		width: 290px;
 		height: 53px;
@@ -1488,8 +1489,8 @@ button:hover {
 		display: flex;
 		align-items: center;
 		border: solid 1px white;
+		background-color: rgb(247, 249, 249);
 	}
-
 
 	&_searchIcon-wrapper {
 		min-width: 44px;
@@ -1521,7 +1522,7 @@ button:hover {
 		display: flex;
 		padding: 13px 0 12px 12px;
 		font-stretch: extra-expanded;
-		border:0;
+		border: 0;
 		height: 18px;
 	}
 
@@ -1533,13 +1534,40 @@ button:hover {
 		font-stretch: 100%;
 		font-weight: 400;
 		//color: rgb(15, 20, 25);
+	}
 
+	&_prompt-wrapper {
+		position: absolute;
+		top: 48.5px;
+		width: 100%;
+		height: 100px;
+		z-index: 1;
+		background-color: #ffffff;
+		border-radius: 8px;
+		box-shadow: rgba(101, 119, 134, 0.2) 0px 0px 15px;
+		box-shadow: rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;;
+
+	}
+
+	&_prompt {
+		width: 100%;
+		height: 72px;
+		box-sizing: border-box;
+		padding: 20px 12px 12px;
+		font-size: 15px;
+		font-weight: 400;
+		line-height: 20px;
+		text-align: center;
+		color: rgb(83, 100, 113);
+		word-wrap: wrap;
+		overflow-wrap: break-word;
+		text-indent: -4px;
 	}
 }
 
-.searchBar--focused{
+.searchBar--focused {
 	@extend .searchBar;
-	border:solid 1px rgb(0, 143, 253);
+	border: solid 1px rgb(0, 143, 253);
 }
 
 .getVerified-wrapper {
