reorganized components structures + removed unused/redundant code & imports

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1785,9 +1785,9 @@ button:hover {
 		color: rgb(83, 100, 113);
 	}
 
-	.thesec {
+	/* .thesec {
 		color: black;
-	}
+	} */
 	&_cards-footer {
 		width: 288px;
 		height: 52px;
