tweaks and more code cleanup

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1545,8 +1545,7 @@ button:hover {
 		background-color: #ffffff;
 		border-radius: 8px;
 		box-shadow: rgba(101, 119, 134, 0.2) 0px 0px 15px;
-		box-shadow: rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;;
-
+		box-shadow: rgba(101, 119, 134, 0.15) 0px 0px 3px 1px;
 	}
 
 	&_prompt {
